src/test/deca/context/invalid/provided/06_invalid_cast_str.deca
{
    string s;
    string f;
    f = (string) (s);

}